PROJECT(src_root)

CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
CMAKE_POLICY(VERSION 3.17)


ADD_SUBDIRECTORY(benchmark_leveldb)
ADD_SUBDIRECTORY(storm)
ADD_SUBDIRECTORY(use_algorithm)
ADD_SUBDIRECTORY(use_benchmark)
#ADD_SUBDIRECTORY(use_boost)
#ADD_SUBDIRECTORY(use_brpc)
#ADD_SUBDIRECTORY(use_cmake)
ADD_SUBDIRECTORY(use_cpp_deduction)
ADD_SUBDIRECTORY(use_cpp_explicit_call)
ADD_SUBDIRECTORY(use_cpp_rvalue_reference)
ADD_SUBDIRECTORY(use_designpattern)
#ADD_SUBDIRECTORY(use_markdown)
ADD_SUBDIRECTORY(use_mmap)
ADD_SUBDIRECTORY(use_mqueue)
#ADD_SUBDIRECTORY(use_ringbuffer)
#ADD_SUBDIRECTORY(use_std)
#ADD_SUBDIRECTORY(use_wxwidgets)
